EFRS-1319/bugfix Mouse cursor not showing as pointer after hovering over buttons

--- a/ui/src/app/features/application-collection-container/application-collection/application-collection.component.scss
+++ b/ui/src/app/features/application-collection-container/application-collection/application-collection.component.scss
@@ -62,6 +62,7 @@
         color: $white;
       }
       &--owner {
+        max-height: 40px;
         color: $white;
       }
     }
